tests/errors/type_check_pattern_match.ceos
type Foo { X(Int) }
type Bar { Y(Int) }

fn _(x: Foo) -> Void {
  let Y(y) = x {
    print(y)
  }
}(X(42))
